--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@vueuse/integrations": "^4.11.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "gsap": "^3.6.1",
     "lodash": "^4.17.21",
     "universal-cookie": "^4.0.4",
     "vue": "^3.0.0",
     "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
