--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "gsap": "^3.6.1",
     "lodash": "^4.17.21",
+    "three": "^0.128.0",
     "universal-cookie": "^4.0.4",
     "vue": "^3.0.0",
     "vue-cookies": "^1.7.4",
