--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueuse/integrations": "^4.11.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "freezeframe": "^5.0.2",
     "gsap": "^3.6.1",
     "lodash": "^4.17.21",
     "three": "^0.128.0",
