--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "@vueuse/core": "^4.11.0",
     "@vueuse/integrations": "^4.11.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "d3": "^6.7.0",
     "freezeframe": "^5.0.2",
@@ -28,6 +30,10 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "node-sass": "^6.0.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^10.2.0",
+    "webpack": "^4.46.0"
   }
 }
