--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuex-persistedstate": "^4.0.0-beta.3",
+    "zingchart": "^2.9.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
